<?xml version="1.0"?>
<package format="2">
  <name>realsense2_description</name>
  <version>2.2.15</version>
  <description>RealSense Camera description package for Intel 3D D400 cameras</description>
  <maintainer email="sergey.dorodnicov@intel.com">Sergey Dorodnicov</maintainer>
  <maintainer email="doron.hirshberg@intel.com">Doron Hirshberg</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://www.ros.org/wiki/RealSense</url>
  <url type="bugtracker">https://github.com/intel-ros/realsense/issues</url>

  <author email="sergey.dorodnicov@intel.com">Sergey Dorodnicov</author>
  <author email="doron.hirshberg@intel.com">Doron Hirshberg</author>

  <exec_depend>xacro</exec_depend>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
