<?xml version="1.0"?>
<package format="3">
  <name>onrobot_airpick4_description</name>
  <version>0.6.4</version>

  <description>Stanley Innovation Robotiq 85 Visual Models</description>
  <maintainer email="dev@stanleyinnovation.com">Patrick Hussey</maintainer>
  <author>Patrick Hussey</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>

