<?xml version="1.0"?>
<package format="3">
  <name>single_suction_description</name>
  <version>0.6.4</version>
  <description>Resources used for MoveIt! testing</description>

  <author email="isucan@willowgarage.edu">Ioan Sucan</author>
  <author email="acorn@willowgarage.edu">Acorn Pooley</author>

  <maintainer email="dave@dav.ee">Dave Coleman</maintainer>

  <license>BSD</license>
  <url type="website">http://moveit.ros.org</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit-resources/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit-resources</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>double_fixture</depend>
  <depend>dual_gripper</depend>
  <depend>gazebo_ros</depend>
  <depend>joint_state_publisher</depend>
  <depend>mounting_kit</depend>
  <depend>robot_state_publisher</depend>
  <depend>robotiq_85_description</depend>
  <depend>rostopic</depend>
  <depend>rviz</depend>
  <depend>tf</depend>
  <depend>ur_description</depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
