<?xml version="1.0"?>
<package format="3">
  <name>single_suction_moveit_config</name>
  <version>0.6.4</version>
  <description>Resources used for MoveIt! testing</description>

  <author email="isucan@willowgarage.edu">Ioan Sucan</author>
  <author email="acorn@willowgarage.edu">Acorn Pooley</author>

  <maintainer email="dave@dav.ee">Dave Coleman</maintainer>

  <license>BSD</license>
  <url type="website">http://moveit.ros.org</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit-resources/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit-resources</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>joint_state_publisher</depend>
  <depend>joy</depend>
  <depend>moveit_ros_benchmarks</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>moveit_ros_warehouse</depend>
  <depend>moveit_setup_assistant</depend>
  <depend>robot_state_publisher</depend>
  <depend>robotiq_85_description</depend>
  <depend>robotiq_85_moveit_config</depend>
  <depend>rviz</depend>
  <depend>warehouse_ros</depend>
  <depend>xacro</depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
